Bug 457136 - Transform mask causes onion skin to render incorrectly
Summary: Transform mask causes onion skin to render incorrectly
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 5.1.0-beta2
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 457135 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-07-25 20:00 UTC by thetwo
Modified: 2024-09-16 13:43 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
bug (1.68 MB, video/mp4)
2022-07-25 20:00 UTC, thetwo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description thetwo 2022-07-25 20:00:14 UTC
SUMMARY
5.1.0 beta2

Currently I found three ways to trigger:
1. Move the image
2. Quickly zoom the canvas
3. Leave krita for a while
Comment 1 thetwo 2022-07-25 20:00:46 UTC
Created attachment 150907 [details]
bug
Comment 2 Emmet O'Neill 2022-08-02 01:00:30 UTC
Ok, I've confirmed the issue. Thanks for the bug report, thetwo.

There are a number of problems with the current onion skins implementation that we intend to resolve in the future.
Comment 3 thetwo 2022-08-02 02:01:59 UTC
*** Bug 457135 has been marked as a duplicate of this bug. ***
Comment 4 Dmitry Kazakov 2024-08-22 16:39:04 UTC
Remove triaged keyword from CONFIRMED bugs
Comment 5 Dmitry Kazakov 2024-09-16 13:42:47 UTC
Git commit ce7a8c5fcadfc932c15c4dea43f69865de97bf14 by Dmitry Kazakov.
Committed on 16/09/2024 at 13:42.
Pushed by dkazakov into branch 'master'.

Fix onion skins rendering on layers with a transform masks

When calculating the final static image of a transform mask we
should use layer's exact bounds, not its original's. The latter
doesn't include the bounds of the onion skins.

M  +5    -1    libs/image/kis_transform_mask.cpp

https://invent.kde.org/graphics/krita/-/commit/ce7a8c5fcadfc932c15c4dea43f69865de97bf14
Comment 6 Dmitry Kazakov 2024-09-16 13:43:08 UTC
Git commit 71dc7df73c4f3ef5a1f06d8d0f9196918d4bf554 by Dmitry Kazakov.
Committed on 16/09/2024 at 13:42.
Pushed by dkazakov into branch 'krita/5.2'.

Fix onion skins rendering on layers with a transform masks

When calculating the final static image of a transform mask we
should use layer's exact bounds, not its original's. The latter
doesn't include the bounds of the onion skins.

M  +5    -1    libs/image/kis_transform_mask.cpp

https://invent.kde.org/graphics/krita/-/commit/71dc7df73c4f3ef5a1f06d8d0f9196918d4bf554