Fix onion skins rendering on layers with a transform masks

When calculating the final static image of a transform mask we
should use layer's exact bounds, not its original's. The latter
doesn't include the bounds of the onion skins.

BUG:457136